# agent-recipe-creator

./: .coverage  .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  SKILLS.md  config.yaml  main_api.py  main_cli.py  main_mcp_http.py  main_mcp_sse.py  main_mcp_stdio.py  pyproject.toml  secrets.yaml.template
.dev/: quick_check.http
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: pr-quality.yml
adapters/input/: __init__.py
adapters/input/cli/: recipe_cli.py
adapters/input/fastapi/: agent_run_router.py  dependencies.py  ingredient_router.py  recipe_router.py  router.py
adapters/input/fastapi/routers/: agent_run_router.py  recipe_router.py
adapters/input/fastmcp/: dependencies.py  ingredient_tools.py  prompts.py  recipe_tools.py  resources.py  tools.py
adapters/input/schemas/: __init__.py  agent_run_schema.py  ingredient_schema.py  recipe_schema.py
adapters/output/duckdb/: ingredient_repository.py  repository.py
adapters/output/memory/: ingredient_repository.py  repository.py
adapters/output/mongodb/: agent_run_repository.py  ingredient_repository.py  repository.py
adapters/output/recipe_agent/: __init__.py  _fuzzy.py  _logger.py  _mcp_registry.py  _nodes.py  _planner.py  _state.py  agent_adapter.py
application/services/: __init__.py  agent_run_service.py  ingredient_service.py  recipe_service.py
application/use_cases/: __init__.py  find_by_name.py  process_raw_recipe.py
config/: secrets.yaml
data/: ingredient.csv
docs/: agent.md  decisions.md  docker.md  implementation.md  new-entity.md  quickstart.md
domain/models/: __init__.py  agent_run.py  ingredient.py  recipe.py
domain/ports/: __init__.py  ingredient_repository.py  recipe_agent.py
infrastructure/: config.py  container.py  ingredient_container.py  logging_setup.py
tests/units/: conftest.py
tests/units/adapters/input/cli/: test_recipe_cli.py
tests/units/adapters/input/fastapi/: test_agent_run_router.py  test_ingredient_router.py  test_recipe_router.py
tests/units/adapters/input/fastmcp/: test_ingredient_tools.py  test_recipe_tools.py
tests/units/adapters/input/schemas/: test_agent_run_schema.py  test_ingredient_schema.py  test_recipe_schema.py
tests/units/adapters/output/memory/: test_repository.py
tests/units/adapters/output/recipe_agent/: test_nodes.py
tests/units/application/services/: test_ingredient_service.py  test_recipe_service.py
tests/units/application/use_cases/: test_find_by_name.py  test_process_raw_recipe.py
tests/units/domain/models/: test_ingredient.py  test_recipe.py
tests/units/infrastructure/: test_config.py  test_container.py  test_ingredient_container.py  test_logging_setup.py
