[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rekipe-sample"
version = "0.1.0"
description = "Sample CRUD — built on arclith"
requires-python = ">=3.13,<3.14"
dependencies = [
    "arclith[mongodb,fastapi,mcp,duckdb]==0.2.0",
]

[tool.uv.sources]
arclith = { path = "../framework", editable = true }

[tool.mypy]
explicit_package_bases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = [
    "domain",
    "adapters",
    "application",
    "infrastructure",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.6",
    "bandit[toml]==1.9.4",
    "radon==6.0.1",
    "mypy==1.19.1",
]


