[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rekipe-agent-recipe-creator"
version = "0.1.0"
description = "Agent IA de création de recettes — built on arclith"
requires-python = ">=3.13,<3.14"
dependencies = [
    "arclith[mongodb,fastapi,mcp,duckdb,vault]>=0.3.0",
    "pydantic-ai>=0.4.0",
    "langgraph>=0.4.0",
    "langchain-mcp-adapters>=0.1.0",
    "rapidfuzz>=3.0",
    "loguru>=0.7",
    "typer>=0.15.0",
]

[tool.mypy]
explicit_package_bases = true

[tool.coverage.run]
source = ["domain", "adapters", "application", "infrastructure"]
branch = true
omit = [
    "main_*.py",
    "**/__init__.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = [
    "domain",
    "adapters",
    "application",
    "infrastructure",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.6",
    "mypy==1.19.1",
    "bandit==1.8.3",
    "radon>=6.0",
    "types-pyyaml>=6.0",
]
